added project №1 Expanding Cards

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -14,18 +14,23 @@
   <div class="container">
     <div class="panel active">
       <h2 class="title_block">Explore The World</h2>
+      <p class="parag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum fuga ad, provident enim culpa dolorem veniam iusto dolore tenetur ipsam animi ducimus officia aperiam mollitia, quod officiis harum libero saepe.Maxime in similique inventore quibusdam sed nobis ratione eveniet soluta ad, labore iusto consequatur laboriosam nulla eos cupiditate earum dicta deleniti dignissimos obcaecati? Eum harum quam provident, tempore iusto magni.</p>
     </div>
     <div class="panel">
       <h2 class="title_block">Explore The World</h2>
+      <p class="parag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum fuga ad, provident enim culpa dolorem veniam iusto dolore tenetur ipsam animi ducimus officia aperiam mollitia, quod officiis harum libero saepe.Maxime in similique inventore quibusdam sed nobis ratione eveniet soluta ad, labore iusto consequatur laboriosam nulla eos cupiditate earum dicta deleniti dignissimos obcaecati? Eum harum quam provident, tempore iusto magni.</p>
     </div>
     <div class="panel">
       <h2 class="title_block">Explore The World</h2>
+      <p class="parag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum fuga ad, provident enim culpa dolorem veniam iusto dolore tenetur ipsam animi ducimus officia aperiam mollitia, quod officiis harum libero saepe.Maxime in similique inventore quibusdam sed nobis ratione eveniet soluta ad, labore iusto consequatur laboriosam nulla eos cupiditate earum dicta deleniti dignissimos obcaecati? Eum harum quam provident, tempore iusto magni.</p>
     </div>
     <div class="panel">
       <h2 class="title_block">Explore The World</h2>
+      <p class="parag">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum fuga ad, provident enim culpa dolorem veniam iusto dolore tenetur ipsam animi ducimus officia aperiam mollitia, quod officiis harum libero saepe.Maxime in similique inventore quibusdam sed nobis ratione eveniet soluta ad, labore iusto consequatur laboriosam nulla eos cupiditate earum dicta deleniti dignissimos obcaecati? Eum harum quam provident, tempore iusto magni.</p>
     </div>
     
   </div>
+  
   <script src="js/script.js"></script>
 </body>
 </html>
